--- a/Projekt1/CMakeLists.txt
+++ b/Projekt1/CMakeLists.txt
@@ -3,7 +3,9 @@ project(Projekt1)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(Projekt1 matrixApp/main.cpp matrixLib/include/matrixLib.h matrixLib/src/matrixLib.cpp)
+add_executable(matrixApp matrixApp/main.cpp matrixLib/include/matrixLib.h matrixLib/src/matrixLib.cpp)
 
 include_directories(matrixLib/include/)
 include_directories(matrixLib/src/)
+
+add_library(matrixLib matrixLib/include/matrixLib.h matrixLib/src/matrixLib.cpp)
